Version 0.1.0~dev

	* Initial release, closes: #4188.