@@ -4,6 +4,8 @@ nobase_toolbox2_PYTHON = \
 	command.py \
 	action/__init__.py \
 	action/extract/__init__.py \
+	action/extract/kttoolbox_extract.py \
 	action/rewrap/__init__.py \
 	action/transcode/__init__.py \
-	worker/__init__.py
+	worker/__init__.py \
+	worker/kttoolbox.py
