@@ -1,3 +1,4 @@
 Version 0.1.0~dev
 
 	* Initial release, closes: #4188.
+	* Add support for kt-toolbox extract action, closes: #4234.
